<resources>
    <string name="app_name" translatable="false">OCC Lost and Found</string>
    <string name="title_activity_maps">Map</string>
    <string name="not_signed_in_text">Not signed in? Click</string>
    <string name="here_text"><u>here.</u></string>
    <string name="reported_lost_items_text">Reported Lost Items</string>
    <string name="reported_lost_items_description_text">Report or view lost item(s).</string>
    <string name="settings_text">Settings</string>
    <string name="settings_description_text">Configure the application settings</string>
    <string name="about_text">About</string>
    <string name="about_description_text">View information regarding the application.</string>
    <string name="contact_information_text">Contact Information</string>
    <string name="contact_information_description_text">View important contact information.</string>
    <string name="map_text">Map</string>
    <string name="map_description_text">View the campus map.</string>
    <string name="faq_text">FAQ</string>
    <string name="faq_description_text">View frequently asked questions.</string>
    <string name="filter_by_name_text">Filter By Item Name:</string>
    <string name="filter_by_category_text">Filter By Category:</string>
    <string name="reset_filters_text">Reset Filters</string>
    <string name="report_item_text">Report Lost Item</string>
    <string name="select_category_text">[Select Category]</string>
    <string name="enter_item_name_text">Enter Item Name...</string>
    <string name="found_text">Found!</string>
    <string name="not_found_text">Not Found.</string>
    <string name="need_account_text">Need an account? Click</string>
    <string name="enter_username_text">Enter Username...</string>
    <string name="enter_password_text">Enter Password...</string>
    <string name="status_text">Status</string>
    <string name="date_lost_text">Enter date lost...</string>
    <string name="enter_last_known_location_text">Enter last known location...</string>
    <string name="description_guide_text">Please describe the item in the best way you can.
        The more specific, the better. You may also leave any additional comments below.</string>
    <string name="reenter_password">Re-Enter Your Password</string>
    <string name="enter_email">Enter Your Student Email</string>
    <string name="enter_student_id">Enter Your Student ID</string>
    <string name="create_account_button">Create New Account</string>
    <string name="back_button">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">SAVE</string>
    <string name="view_items_list_text">View Items List</string>
    <string name="login_text">Login</string>
    <string name="full_features_text">NOTE: You must be signed in to use the full features of this app.</string>
    <string name="occ_campus_map_text">Orange Coast College Campus Map</string>
    <string name="sign_in_text">Sign In</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="invalid_username_password_text">Username or password is invalid.</string>
    <string name="skipping_bad_csv_row_text">Skipping Bad CSV Row: </string>
    <string name="all_reported_items_text">[All Reported Items]</string>
    <string name="list_empty_text">List is already empty.</string>
    <string name="all_fields_mandatory_text">All fields except item image and description are mandatory.</string>
    <string name="camera_and_external_permissions">OCC Lost and Found requires camera and external storage permissions.</string>
    <string name="camera_permissions">OCC Lost and Found requires camera permissions.</string>
    <string name="external_permissions">OCC Lost and Found requires external storage permissions.</string>
    <string name="allow_sms">SMS Notification</string>
    <string name="allow_shake">Turn On Shake</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="resources_text">Resources</string>
    <string name="cancel_text">Cancel</string>
    <string name="enter_item_description_text">Additional details and comments (optional)...</string>
    <string name="item_lost_text">Enter item name...</string>
    <string name="click_to_change_image_text">Click above to select the image of your item (optional)</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="occ_address" translatable="false">2701 Fairview Road \nCosta Mesa, CA 92626</string>
    <string name="office_title" translatable="false">Associated Students of Orange Coast College</string>
    <string name="occ_map_button">Locate the ASOCC office on campus map</string>
    <string name="contact_info">CONTACT INFO</string>
    <string name="asocc_email" translatable="false">asocc@occ.cccd.edu</string>
    <string name="asocc_phone" translatable="false">(714) 432-5730</string>
    <string name="not_found">Not Found</string>
    <string name="must_be_email_text">Must be an OCC student e-mail</string>
    <string name="student_cccd_edu" translatable="false">\@student.cccd.edu</string>
    <string name="admin_text">admin</string>
    <string name="password_same_text">Password must be the same</string>
    <string name="must_be_signed_in_text">You must be signed in to report a lost item.</string>
    <string name="select_month_text">[Select a Month]</string>
    <string name="select_day_text">[Select a Day]</string>
    <string name="january_text">January</string>
    <string name="february_text">February</string>
    <string name="march_text">March</string>
    <string name="april_text">April</string>
    <string name="may_text">May</string>
    <string name="june_text">June</string>
    <string name="july_text">July</string>
    <string name="august_text">August</string>
    <string name="september_text">September</string>
    <string name="october_text">October</string>
    <string name="november_text">November</string>
    <string name="december_text">December</string>
    <string name="february_29_days">Error: February has only 29 days!</string>
    <string name="enable_sms_this_item">Enable SMS notifications for this item</string>
    <string name="day_text">[Day]</string>
    <string name="allow_sms_notification">Allow SMS notification for this item</string>
    <string name="date_time_lost">Date/Time Lost: </string>
    <string name="last_know_location">Last Known Location: </string>
    <string name="item_description">Additional details and comments:</string>
    <string name="feedback_title">We appreciate your feedback!</string>
    <string name="submit">Submit</string>
    <string name="view_reports">View Your Reports</string>
    <string name="feeback">Feedback</string>
    <string name="view_all_reports">View All Reports</string>
    <string name="view_user_feedback">View User Feedback</string>
    <string name="send_sms">Send SMS Message</string>
    <string name="enter_sms_message">Enter text message here...</string>
    <string name="sms_choose_users">Choose Receivers</string>
    <string name="search_username">Search using username...</string>
    <string-array name="status_choices">
        <item>Not Found</item>
        <item>Found</item>
    </string-array>
    <string name="month_text">[Month]</string>
    <string name="change_user_settings_text">Change User Settings</string>
    <string name="enable_shake_features_text">Enable Shake Features</string>
    <string name="next_text">Next</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="enter_old_passoword">Enter Old Password</string>
    <string name="enter_new_password">Enter Your New Password</string>
    <string name="reenter_new_password">Re-Enter Your New Password</string>
    <string name="view_all_users">View All Users</string>
    <string name="username">Username:</string>
    <string name="studentID">Student ID:</string>
    <string name="email_address">Email Address:</string>
    <string name="phone_number_view">Phone Number:</string>
    <string name="change_info_button_text">Change Account Information</string>
    <string name="student_email_text">Student Email</string>
    <string name="password_text">Password</string>
    <string name="user_name_text">User Name</string>
    <string name="student_id_text">Student ID</string>
    <string name="admin_name_taken_text">Sorry Admin, your user name has already been taken.</string>
    <string name="my_reported_items">[My Reported Items]</string>
    <string name="found_items_text">[Found Items]</string>
    <string name="missing_items_text">[Missing Items]</string>
    <string name="item_text">Item</string>
    <string name="successfully_text">Successfully!</string>
    <string name="occ_text" translatable="false">OCC</string>
    <string name="orange_coast_college_text" translatable="false">Orange Coast College</string>
    <string name="feedback_text">Feedback</string>
    <string name="app_purpose_text">The Purpose of the App</string>
    <string name="reported_successfully_text">reported successfully.</string>
    <string name="passwords_do_not_match">Your new password does not match.</string>
    <string name="old_password_incorrect">Your old password is incorrect.</string>
    <string name="contact_info_text">Contact Info.</string>
    <string name="loading_campus_map_text">Loading Campus Map...</string>
    <string name="found">Found</string>
    <string name="your_item_has_been_found_text">Your item have been found. Visit ASSOCC to verify.</string>
    <string name="frequently_asked_questions_text">Frequently Asked Questions</string>
    <string name="q" translatable="false">Q:</string>
    <string name="question_where_are_asocc_offices">Where are  the ASOCC offices located?</string>
    <string name="a" translatable="false">A:</string>
    <string name="answer_asocc_location">The ASOCC offices are located at the Student Services Center near Watson Hall.
        Enter from the main entrance and they will be located at the first door to the right.</string>
    <string name="question_where_is_lost_and_found">Where is the Lost and Found at OCC?</string>
    <string name="answer_lost_and_found_location">There are a total of two lost and found locations at OCC.
        The main center is located at the ASOCC office (location explained above), while the second is located
        at the OCC Campus Safety Office located in E Lot. To see the OCC campus map, click</string>
    <string name="question_how_to_pick_up_item">How do I retrieve my items?</string>
    <string name="answer_pick_up_item_text">To retrieve your lost items, head to the lost and found centers         (starting with the ASOCC). Be sure to bring some sort of identification with you         (whether it be a driver\'s license, student ID, etc). Depending on the item, the ASOCC staff         may need to perform extra steps to verify that the item is yours. NOTE: If you retrieved your item         at the ASOCC office, there is no need to visit hte OCC Campus safety office.</string>
    <string name="app_about_description_text">The OCC Lost and Found app emphasizes the importance of simplicity, convenience, and most of all—efficiency. Whether it be something as simple as losing an ID to something as large as losing a wallet, our goal is to help any student at OCC find and recover their belongings. With our account based login system, users can easily track any and all reported items with ease.</string>
    <string name="saved_successfully_text">Saved Successfully!</string>
    <string name="must_be_cccd_email">Must be a .cccd email</string>
    <string name="account_created_text">Account Created!</string>
    <string name="all_fields_filled_out_text">All fields must not be filled out!</string>
    <string name="filter_by_username">Filter By Username</string>
    <string name="enter_username">Enter Username</string>
</resources>