<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.occlostandfound.PasswordChangeActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/enter_old_passoword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/oldPasswordEditText"
        android:hint="@string/enter_old_passoword" />

    <TextView
        android:text="@string/enter_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newPasswordEditText"
        android:hint="@string/enter_new_password" />

    <TextView
        android:text="@string/reenter_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView21" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reNewPasswordEditText"
        android:hint="@string/reenter_new_password" />

    <Button
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:onClick="saveNewPassword (PasswordChangeActivity)" />
</LinearLayout>
