<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin_item_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.occlostandfound.AdminItemListActivity"
    android:orientation="vertical"
    android:focusableInTouchMode = "true">

    <ImageView
        android:layout_width="match_parent"
        android:src="@drawable/lost_and_found_display"
        android:layout_marginBottom="10dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_username" />

        <EditText
            android:id="@+id/adminSearchNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.38"
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_name_text" />

        <EditText
            android:id="@+id/adminSearchUserEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.38"
            android:ems="10"
            android:hint="@string/enter_item_name_text"
            android:inputType="textPersonName" />
    </LinearLayout>


    <ListView
        android:id="@+id/reportListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
