<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.occlostandfound.SettingsActivity">

    <CheckBox
        android:text="@string/enable_shake_features_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/shakeAllowedCheckBox"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <CheckBox
        android:text="@string/change_user_settings_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shakeAllowedCheckBox"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:id="@+id/changeUserSettingsCheckBox"
        android:textSize="30sp" />

    <Button
        android:text="@string/next_text"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp" />

</RelativeLayout>
