<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.occlostandfound.FAQActivity">

    <TextView
        android:text="@string/frequently_asked_questions_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/faqTitleTextView"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp" />

    <TextView
        android:text="@string/question_where_are_asocc_offices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer1TextView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/question1TextView"
        android:layout_alignBottom="@+id/question1TextView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cast_expanded_controller_background_color" />

    <TextView
        android:text="@string/q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/question1TextView"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/faqTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/cast_expanded_controller_background_color" />

    <TextView
        android:text="@string/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/question1TextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:id="@+id/textView31"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:text="@string/answer_asocc_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView32"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_alignTop="@+id/textView31"
        android:layout_alignLeft="@+id/answer1TextView"
        android:layout_alignStart="@+id/answer1TextView" />

    <TextView
        android:text="@string/question_where_is_lost_and_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView33"
        android:layout_alignLeft="@+id/textView32"
        android:layout_alignStart="@+id/textView32"
        android:id="@+id/textView34"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textSize="18sp" />

    <TextView
        android:text="@string/q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/textView33"
        android:textSize="24sp"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/textView32"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/textView35"
        android:textStyle="normal|bold|italic"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:layout_below="@+id/textView33"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/answer_lost_and_found_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView36"
        android:layout_alignBaseline="@+id/textView35"
        android:layout_alignBottom="@+id/textView35"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textView34"
        android:layout_alignStart="@+id/textView34"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:text="@string/question_how_to_pick_up_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView37"
        android:layout_alignLeft="@+id/textView36"
        android:layout_alignStart="@+id/textView36"
        android:id="@+id/textView38"
        android:textSize="18sp"
        android:textColor="@color/cast_expanded_controller_background_color" />

    <TextView
        android:text="@string/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:id="@+id/textView39"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:layout_below="@+id/textView37"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/answer_pick_up_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView40"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView39"
        android:layout_alignBottom="@+id/textView39"
        android:layout_alignLeft="@+id/textView38"
        android:layout_alignStart="@+id/textView38" />

    <TextView
        android:text="@string/here_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView41"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="normal|bold|italic"
        android:layout_alignBottom="@+id/textView36"
        android:layout_alignLeft="@+id/textView36"
        android:layout_alignStart="@+id/textView36"
        android:layout_marginLeft="86dp"
        android:layout_marginStart="86dp" />

    <TextView
        android:text="@string/q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView37"
        android:textSize="24sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/cast_expanded_controller_background_color"
        android:layout_below="@+id/textView36"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

</RelativeLayout>
