<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.vnguyen629.occlostandfound.LoginActivity"
    android:orientation="vertical"
    android:focusableInTouchMode = "true">

    <TextView
        android:text="@string/need_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:id="@+id/needAccountTextView"
        android:textSize="18sp"
        android:layout_below="@+id/loginButtonImageView"
        android:layout_alignLeft="@+id/occLogoLoginImageView"
        android:layout_alignStart="@+id/occLogoLoginImageView"
        android:textStyle="normal|italic" />

    <TextView
        android:text="@string/here_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerTextView"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="normal|bold|italic"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/needAccountTextView"
        android:layout_alignBottom="@+id/needAccountTextView"
        android:layout_toRightOf="@+id/needAccountTextView"
        android:layout_toEndOf="@+id/needAccountTextView"
        android:layout_marginLeft="7dp"
        android:clickable="true"
        android:onClick="createAccount" />

    <TextView
        android:text="@string/full_features_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menuLoggedInTextView"
        android:textStyle="normal|italic"
        android:layout_below="@+id/needAccountTextView"
        android:layout_marginTop="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp"
        android:layout_alignRight="@+id/passwordLoginEditText"
        android:layout_alignEnd="@+id/passwordLoginEditText"
        android:gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLoginEditText"
        android:hint="@string/enter_password_text"
        android:gravity="center_vertical|center"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/usernameLoginEditText"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:id="@+id/occLogoLoginImageView"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:cropToPadding="true"
        android:layout_marginTop="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameLoginEditText"
        android:gravity="center_vertical|center"
        android:hint="@string/enter_username_text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/login_button"
        android:id="@+id/loginButtonImageView"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:onClick="login"
        android:clickable="true"
        android:layout_below="@+id/passwordLoginEditText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textColor="@android:color/holo_orange_dark"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:layout_below="@+id/occLogoLoginImageView"
        android:layout_centerHorizontal="true" />

</RelativeLayout>